deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hello-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: hello-py-app
    template:
       metadata:
          labels:
             app: hello-py-app
       spec:
          containers:
          - name: hello-py-app
            image: slavadikhnich/hometask_1:8000
            ports:
              - name: web 
                containerPort: 8000
            livenessProbe:
              httpGet:
                port: 8000
                path: /health
              initialDelaySeconds: 20
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 8000
                path: /ready
              initialDelaySeconds: 30
              periodSeconds: 5
