service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello-py-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
